# url-organizer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  file_parsing.rs  main.rs  url_pool.rs  url_struct.rs
src/url_files/: tmp.txt
