[package]
name = "url-organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
#gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
eframe = "0.21.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
rfd = "0.11.3"